# kyberlib

./: .editorconfig  .gitattributes  .gitignore  AUTHORS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  GETTING_STARTED.md  GLOSSARY.md  LICENSE-MIT  Makefile  PLAN.md  README.md  REUSE.toml  SECURITY.md  TEMPLATE.md  about.hbs  about.toml  build.rs  clippy.toml  deny.toml  rustfmt.toml
.cargo/: config.toml
.github/: CODE-OF-CONDUCT.md  CODEOWNERS  SECURITY.md
.github/workflows/: audit.yml  check.yml  ci.yml  coverage.yml  docs.yml  document.yml  lint.yml  miri-weekly.yml  release.yml  test.yml
LICENSES/: Apache-2.0.txt
benches/: api.rs  bench.rs  criterion.rs
crates/kyberlib/: Cargo.toml  README.md  build.rs
crates/kyberlib-asm/: Cargo.toml  README.md
crates/kyberlib-asm/benches/: _placeholder.rs
crates/kyberlib-asm/doc/: README.md  architecture.md  roadmap.md
crates/kyberlib-asm/examples/: _placeholder.rs
crates/kyberlib-asm/src/: lib.rs
crates/kyberlib-asm/tests/: _placeholder.rs
crates/kyberlib-hybrid/: Cargo.toml  README.md
crates/kyberlib-hybrid/benches/: _placeholder.rs
crates/kyberlib-hybrid/doc/: README.md  architecture.md  guide.md  spec.md
crates/kyberlib-hybrid/examples/: x25519_mlkem768_round_trip.rs
crates/kyberlib-hybrid/src/: lib.rs
crates/kyberlib-hybrid/tests/: round_trip.rs  smoke.rs
crates/kyberlib-pkcs8/: Cargo.toml  README.md
crates/kyberlib-pkcs8/benches/: _placeholder.rs
crates/kyberlib-pkcs8/doc/: README.md  architecture.md  spec.md
crates/kyberlib-pkcs8/examples/: _placeholder.rs
crates/kyberlib-pkcs8/src/: lib.rs
crates/kyberlib-pkcs8/tests/: _placeholder.rs
crates/kyberlib-wasm/: Cargo.toml  README.md
crates/kyberlib-wasm/benches/: _placeholder.rs  api.rs
crates/kyberlib-wasm/doc/: README.md  architecture.md  usage.md
crates/kyberlib-wasm/examples/: _placeholder.rs  aead.html  browser.html  node.js
crates/kyberlib-wasm/src/: lib.rs
crates/kyberlib-wasm/tests/: integration.rs  native.rs
crates/kyberlib/benches/: api.rs  bench.rs  dudect.rs
crates/kyberlib/doc/: README.md  architecture.md  cookbook.md  migration-from-0.0.6.md  release-process.md  safety.md
crates/kyberlib/examples/: deterministic_seed.rs  kem.rs  no_std_demo.rs  typed_kem.rs
crates/kyberlib/src/: api.rs  error.rs  kem.rs  kex.rs  lib.rs  macros.rs  ml_kem.rs  oid.rs  params.rs  paramsets.rs  rng.rs  symmetric.rs
crates/kyberlib/src/avx2/: align.rs  indcpa.rs  keccak4x.rs  poly.rs  rejsample.rs
crates/kyberlib/src/reference/: cbd.rs  fips202.rs  indcpa.rs  mod.rs  poly.rs  polyvec.rs  reduce.rs  verify.rs
crates/kyberlib/tests/: run_all_tests.sh  test_acvp.rs  test_coverage_gaps.rs  test_kat.rs  test_lib.rs  test_properties.rs  test_rng.rs  test_snapshots.rs  test_symmetric.rs
crates/kyberlib/tests/acvp/: README.md  SHA256SUMS
crates/kyberlib/tests/rand_bufs/: readme.md
crates/kyberlib/tests/snapshots/: test_snapshots__debug_ciphertext_is_opaque.snap  test_snapshots__debug_redaction_decap_key.snap  test_snapshots__debug_redaction_encap_key.snap  test_snapshots__debug_redaction_shared_secret.snap  test_snapshots__error_decapsulation.snap  test_snapshots__error_invalid_input.snap  test_snapshots__error_invalid_key.snap  test_snapshots__error_invalid_length.snap  test_snapshots__error_random_bytes.snap  test_snapshots__ml_kem_768_algorithm_id.snap  test_snapshots__ml_kem_768_oid.snap
crates/kyberlib/tests/utils/: mod.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
doc/: BENCHMARKS.md  COMPARISON.md
doc/adr/: 0001-fips203-migration.md  0002-asm-quarantine.md  0003-kyberslash-audit.md  0004-multi-param-strategy.md  0005-byoe-deterministic-api.md  0006-fips-facade.md
doc/audits/: MATERIALS.md  READINESS.md  README.md  RFP-v1.0.md
doc/patches/: phase-2b-evidence.md  phase-2b-fips203.patch
examples/: ake.rs  kem.rs  uake.rs
fuzz/: Cargo.toml  README.md
fuzz/fuzz_targets/: fuzz_ct_parse.rs  fuzz_decap.rs  fuzz_pk_parse.rs  fuzz_roundtrip.rs
scripts/: acvp-refresh.sh  cbom.sh  coverage.sh  dudect.sh  kyberslash-guard.sh  miri.sh
src/: aes256.rs  api.rs  error.rs  kem.rs  kex.rs  lib.rs  loggers.rs  macros.rs  main.rs  params.rs  rng.rs  symmetric.rs  wasm.rs
src/avx2/: aes256ctr.rs  cbd.rs  consts.rs  fips202.rs  fips202x4.rs  indcpa.rs  poly.rs  polyvec.rs  rejsample.rs  verify.rs
src/reference/: aes256ctr.rs  cbd.rs  fips202.rs  indcpa.rs  mod.rs  ntt.rs  poly.rs  polyvec.rs
supply-chain/: README.md  audits.toml  config.toml
tests/: kem.rs  readme.md  test.rs  test_aes256ctr.rs  test_api.rs  test_error.rs  test_kat.rs  test_kem.rs  test_kex.rs  test_lib.rs  test_loggers.rs  test_macros.rs  test_params.rs  test_rng.rs  test_symmetric.rs  test_wasm.rs
tests/KAT/: readme.md
tests/load/: mod.rs
tests/rand_bufs/: generate_bufs.c  readme.md
tests/utils/: mod.rs
xtask/: Cargo.toml
