[package]
# Metadata about the package.
authors = ["The kyberlib contributors <contact@kyberlib.com>"]
build = "build.rs"
categories = ["algorithms", "cryptography", "wasm", "no-std"]
description = "A Robust Rust Library for CRYSTALS-Kyber Post-Quantum Cryptography."
documentation = "https://docs.rs/kyberlib"
edition = "2021"
rust-version = "1.74"
exclude = [
    "/.git/*",
    "/.github/*",
    "/.gitignore",
    "/.vscode/*"
]
homepage = "https://kyberlib.com"
include = [
    "/CHANGELOG.md",
    "/CONTRIBUTING.md",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/SECURITY.md",
    "/benches/**",
    "/build.rs",
    "/Cargo.toml",
    "/examples/**",
    "/README.md",
    "/src/**",
    "/tests/**",
]
keywords = ["kyber", "kem", "key-exchange", "kex", "post-quantum"]
license = "MIT OR Apache-2.0"
name = "kyberlib"
readme = "README.md"
repository = "https://github.com/sebastienrousseau/kyberlib"
version = "0.0.7"

[dependencies]
# Dependencies for the library
aes = { version = "0.8.4", optional = true }
ctr = { version = "0.9.2", optional = true }
rand = { version = "0.8.5", default-features = false, features = ["getrandom"] }
rand_core = { version = "0.6.4",  default-features = false }
sha2 = { version = "0.10.8", optional = true }
wasm-bindgen = { version = "0.2.100", optional = true }
zeroize = { version = "1.7.0", default-features = false, features = ["derive"] }

[dev-dependencies]
# Dependencies for testing
criterion = "0.5.1"
# Enable rand's std + std_rng features so tests / examples / benches
# can use `rand::thread_rng()` and `rand::rngs::StdRng`. The library
# itself stays `no_std`-friendly via `rand = { ..., default-features = false }`
# under [dependencies].
rand = { version = "0.8.5", features = ["std", "std_rng"] }
wasm-bindgen-test = "0.3.43"

# benchmarking = ["criterion"]

[build-dependencies]
# Dependencies for the build script
cc = {version = "1.2.10", optional = true }
nasm-rs = {version = "0.3.0", optional = true }

[lib]
# Metadata about the library.
#
# v0.0.7 narrows `crate-type` from `["cdylib", "rlib", "staticlib"]` to `rlib`
# only. The previous cdylib/staticlib outputs only compiled because the
# non-optional `wasm-bindgen` dep transitively supplied a panic_handler in
# no_std mode — making `wasm-bindgen` optional exposed the gap. Phase 1.3 of
# the v0.0.7 roadmap (issue #144) re-introduces cdylib via a dedicated
# `kyberlib-wasm` workspace crate. If you currently consume kyberlib as a
# C-ABI shared/static library, please file an issue with your use case;
# until the dedicated crate ships, `cargo rustc -- --crate-type=cdylib`
# works as a one-off.
crate-type = ["rlib"]
name = "kyberlib"
path = "src/lib.rs"

# [[bench]]
# name = "bench"
# harness = false
# path = "benches/bench.rs"

[features]
### Security Levels ###
# Defaults to "kyber768" if none selected.
# Will throw a compile-time error if more than one level is chosen.
# NOTE (v0.0.7): kyber512 / kyber1024 are referenced via `cfg(feature = ...)`
# in the source tree but currently disabled — Phase 3 of the v0.0.7 roadmap
# replaces this Cargo-feature switch with sealed marker types
# (`MlKem512`, `MlKem768`, `MlKem1024`). See issues #130 / #153 / #158.
#
# `std` is on by default (since v0.0.7) so `cargo build` works for the
# crate-type=["cdylib", "rlib", "staticlib"] layout out of the box. For
# embedded / `no_std` use, set `default-features = false` and re-enable
# `kyber768` explicitly (see README "no_std usage").
default = ["kyber768", "std"]
# kyber512 = []
kyber768 = []
# kyber1024 = []

### Export IND-CPA primitives
# **WARNING** use with caution
hazmat = []

### Additional features ###
# 90s mode uses AES256-CTR and SHA2 as primitives instead of SHAKE.
# (Removed from FIPS 203; retained pre-spec-migration for compatibility.)
90s = ["sha2"]

# Fixslice RustCrypto AES implementation offers some additional sidechannel
# attack resistance. Suggest benchmarking for comparison.
90s-fixslice = ["90s", "aes", "ctr"]

# Use avx2 intrinsics on x86 architectures
# Won't compile if the platform doesn't support it
avx2 = ["cc"]

# For compiling to wasm targets
wasm = ["wasm-bindgen"]

# Uses Netwide Assembler avx2 code instead of GAS, this offers increased
# portability, you will need a nasm compiler installed.
# Can be downloaded from https://www.nasm.us/
nasm = ["nasm-rs", "avx2"]

# Enable std library support
std = ["zeroize/std"]

# Opt-out path for `ZeroizeOnDrop` on key types. ON by default — disabling
# is strongly discouraged outside of microcontroller targets with no stack.
zeroize = []

[package.metadata.docs.rs]
# docs.rs uses kyber768 by default. AVX2 / nasm / 90s are mutually
# incompatible across builds and are excluded from the rendered docs.
features = ["kyber768", "std", "hazmat", "wasm"]
rustdoc-args = ["--cfg", "docsrs"]

# Linting config
[lints.rust]

# Declare custom cfg values (silences `unexpected_cfgs` warnings introduced
# in Rust 1.80+). `kyber512`/`kyber1024` are wired through the source but
# the Cargo features are currently disabled — see issue #130.
# `KYBER_SECURITY_PARAMETERat` and `fuzzing` are test/fuzz harness gates.
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(KYBER_SECURITY_PARAMETERat)',
    'cfg(fuzzing)',
    'cfg(docsrs)',
    'cfg(feature, values("kyber512", "kyber1024", "benchmarking"))',
    # Emitted by `wasm-bindgen-test` 0.3 attribute macro expansion;
    # nothing we control. Tracked in their issue tracker.
    'cfg(wasm_bindgen_unstable_test_coverage)',
] }

## Warn
# box_pointers = "warn"
missing_copy_implementations = "warn"
# `missing_docs` is denied at the *library* crate root (src/lib.rs), not
# here at the package level — putting it in `[lints.rust]` would also
# propagate to integration tests, which by convention don't need module
# docs on every `tests/*.rs`.
unstable_features = "warn"
# unused_crate_dependencies = "warn"
# unused_extern_crates = "warn"
unused_results = "warn"

## Allow
bare_trait_objects = "allow"
elided_lifetimes_in_paths = "allow"
non_camel_case_types = "allow"
non_upper_case_globals = "allow"
trivial_bounds = "allow"
unsafe_code = "allow"

## Forbid
# Specific lints carry explicit positive priority so they override the
# lint groups below (which use priority = -1). This satisfies
# `clippy::lint_groups_priority` introduced in Rust 1.81.
missing_debug_implementations = { level = "forbid", priority = 1 }
non_ascii_idents = { level = "forbid", priority = 1 }
unreachable_pub = { level = "forbid", priority = 1 }

## Deny
dead_code = { level = "deny", priority = 1 }
deprecated_in_future = { level = "deny", priority = 1 }
ellipsis_inclusive_range_patterns = { level = "deny", priority = 1 }
explicit_outlives_requirements = { level = "deny", priority = 1 }
# `keyword_idents` is a *group* (keyword_idents_2018 / _2024), so it goes
# with the other groups at priority = -1.
macro_use_extern_crate = { level = "deny", priority = 1 }
meta_variable_misuse = { level = "deny", priority = 1 }
# missing_fragment_specifier: converted to hard error in newer rustc; remove
# pointer_structural_match: removed in newer rustc (RFC 3535); remove
noop_method_call = { level = "deny", priority = 1 }
single_use_lifetimes = { level = "deny", priority = 1 }
trivial_casts = { level = "deny", priority = 1 }
trivial_numeric_casts = { level = "deny", priority = 1 }
unused_features = { level = "deny", priority = 1 }
unused_import_braces = { level = "deny", priority = 1 }
unused_labels = { level = "deny", priority = 1 }
unused_lifetimes = { level = "deny", priority = 1 }
unused_macro_rules = { level = "deny", priority = 1 }
unused_qualifications = { level = "deny", priority = 1 }
variant_size_differences = { level = "deny", priority = 1 }

## Deny (lint groups — priority = -1 so the specific lints above win)
future_incompatible = { level = "deny", priority = -1 }
keyword_idents = { level = "deny", priority = -1 }
rust_2018_idioms = { level = "deny", priority = -1 }
rust_2021_compatibility = { level = "deny", priority = -1 }
unused = { level = "deny", priority = -1 }

[package.metadata.clippy]
warn-lints = ["clippy::all", "clippy::pedantic", "clippy::cargo", "clippy::nursery"]

[lints.clippy]
# Allowed pre-existing clippy warnings — slated for cleanup post-Phase 0.
# Tracking issue: file once Phase 0 lands.
doc_lazy_continuation     = "allow"
assertions_on_constants   = "allow"
manual_rotate             = "allow"

[profile.dev]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
panic = 'unwind'
rpath = false
strip = false

[profile.release]
codegen-units = 1
debug = false
debug-assertions = false
incremental = false
lto = true
opt-level = 3
overflow-checks = false
panic = "abort"
rpath = false
strip = "symbols"

[profile.test]
codegen-units = 256
debug = true
debug-assertions = true
incremental = true
lto = false
opt-level = 0
overflow-checks = true
rpath = false
strip = false
