# Workspace root for kyberlib.
#
# v0.0.7 (#128) splits the previously-monolithic single crate into a
# workspace. Phase 1 lands the safe core (`crates/kyberlib`). Phase 1.2
# (#143) adds `crates/kyberlib-asm` for the AVX2 / NEON acceleration so
# the safe core can `#![forbid(unsafe_code)]`. Phase 1.3 (#144) adds
# `crates/kyberlib-wasm` for the wasm-bindgen JS shim. Future phases add
# `crates/kyberlib-hybrid`, `crates/kyberlib-pkcs8`, `crates/kyberlib-fuzz`,
# and `crates/xtask`.

[workspace]
resolver = "2"
members = [
    "crates/kyberlib",
    "crates/kyberlib-asm",
    "crates/kyberlib-hybrid",
    "crates/kyberlib-pkcs8",
    "crates/kyberlib-wasm",
    "crates/xtask",
]
# `fuzz/` is its own package — excluded from the workspace because
# cargo-fuzz requires nightly + libFuzzer and adds heavy deps we
# do not want in normal builds. Driven via `make fuzz` / `cargo +nightly
# fuzz run ...` from inside the `fuzz/` directory.
exclude = ["fuzz"]

# Shared package metadata. Member crates inherit via `field.workspace = true`.
[workspace.package]
authors      = ["The kyberlib contributors <contact@kyberlib.com>"]
edition      = "2021"
homepage     = "https://kyberlib.com"
license      = "MIT OR Apache-2.0"
repository   = "https://github.com/sebastienrousseau/kyberlib"
rust-version = "1.74"
version      = "0.0.7"

# Shared dependency pins. Members inherit via `dep = { workspace = true }`.
[workspace.dependencies]
aes              = { version = "0.8.4",  default-features = false }
ctr              = { version = "0.9.2",  default-features = false }
rand             = { version = "0.8.6",  default-features = false }
rand_core        = { version = "0.6.4",  default-features = false }
sha2             = { version = "0.10.8", default-features = false }
wasm-bindgen     = { version = "0.2.122", default-features = false }
wasm-bindgen-test = { version = "0.3.50" }
zeroize          = { version = "1.8.2",  default-features = false, features = ["derive"] }
cc               = { version = "1.2.62" }
nasm-rs          = { version = "0.3.2" }
criterion        = { version = "0.5.1" }
serde            = { version = "1.0",   default-features = false, features = ["derive"] }
serde_json       = { version = "1.0",   default-features = false, features = ["alloc"] }
# X25519 classical KEM (used by `kyberlib-hybrid`'s X25519MLKEM768).
# `default-features = false` keeps the dep no_std-friendly; the
# downstream crate re-enables features it needs (e.g. zeroize via the
# `static_secrets` feature for symmetric secret-key storage).
x25519-dalek     = { version = "2.0",   default-features = false, features = ["zeroize", "static_secrets"] }
# Property-based / snapshot testing (dev-only).
proptest         = { version = "1.5" }
rand_chacha      = { version = "0.3" }
insta            = { version = "1.40", features = ["yaml"] }
# Welch's t-test runner for constant-time analysis (eprint 2016/1123).
# `default-features = false` keeps the ctgrind backend off (we use the
# native counter-based timing).
dudect-bencher   = { version = "0.7" }

# Workspace-level lints. Members opt in with `[lints] workspace = true`.
# Specific lints carry explicit positive priority so they override the
# lint groups below (which use priority = -1). This satisfies
# `clippy::lint_groups_priority` introduced in Rust 1.81.
[workspace.lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = [
    'cfg(KYBER_SECURITY_PARAMETERat)',
    'cfg(fuzzing)',
    'cfg(docsrs)',
    'cfg(feature, values("kyber512", "kyber1024", "benchmarking"))',
    'cfg(wasm_bindgen_unstable_test_coverage)',
] }

## Warn
missing_copy_implementations = "warn"
unstable_features            = "warn"
# `unused_results = warn` is incompatible with the criterion builder
# pattern in benches (every `c.bench_function(...)` returns `&mut
# Criterion` that benches naturally discard). Allow-list at the
# workspace level; site-by-site `let _ =` would be churn.
unused_results               = "allow"

## Allow
bare_trait_objects         = "allow"
elided_lifetimes_in_paths  = "allow"
non_camel_case_types       = "allow"
non_upper_case_globals     = "allow"
trivial_bounds             = "allow"
unsafe_code                = "allow"   # Tightened to `forbid` in the safe core; this is the workspace floor

## Forbid (specific)
missing_debug_implementations = { level = "forbid", priority = 1 }
non_ascii_idents              = { level = "forbid", priority = 1 }
unreachable_pub               = { level = "forbid", priority = 1 }

## Deny (specific)
dead_code                       = { level = "deny", priority = 1 }
deprecated_in_future            = { level = "deny", priority = 1 }
ellipsis_inclusive_range_patterns = { level = "deny", priority = 1 }
explicit_outlives_requirements  = { level = "deny", priority = 1 }
macro_use_extern_crate          = { level = "deny", priority = 1 }
meta_variable_misuse            = { level = "deny", priority = 1 }
noop_method_call                = { level = "deny", priority = 1 }
single_use_lifetimes            = { level = "deny", priority = 1 }
trivial_casts                   = { level = "deny", priority = 1 }
trivial_numeric_casts           = { level = "deny", priority = 1 }
unused_features                 = { level = "deny", priority = 1 }
unused_import_braces            = { level = "deny", priority = 1 }
unused_labels                   = { level = "deny", priority = 1 }
unused_lifetimes                = { level = "deny", priority = 1 }
unused_macro_rules              = { level = "deny", priority = 1 }
unused_qualifications           = { level = "deny", priority = 1 }
variant_size_differences        = { level = "deny", priority = 1 }

## Deny (groups, priority = -1 so the specific lints above win)
future_incompatible     = { level = "deny", priority = -1 }
keyword_idents          = { level = "deny", priority = -1 }
rust_2018_idioms        = { level = "deny", priority = -1 }
rust_2021_compatibility = { level = "deny", priority = -1 }
unused                  = { level = "deny", priority = -1 }

[workspace.lints.clippy]
# Lint *groups* carry `priority = -1` so the per-lint overrides below
# (`priority = 0`, the default) win, satisfying the post-1.81
# `clippy::lint_groups_priority` check.
#
# Policy:
#   `pedantic`  — warn (raise the floor on subtle issues without blocking)
#   `nursery`   — warn (early-warning lints that haven't yet stabilised)
#   `cargo`     — warn (manifest-side hygiene)
#   `correctness`/`suspicious`/`complexity`/`perf`/`style` — inherited
#     from the default `clippy::all` group, which is deny-by-clippy-default.
pedantic = { level = "warn", priority = -1 }
nursery  = { level = "warn", priority = -1 }
cargo    = { level = "warn", priority = -1 }

# ---- Subjective allows, with rationale ----
# Pre-existing items kept from the v0.0.6 floor:
doc_lazy_continuation   = "allow"
assertions_on_constants = "allow"
manual_rotate           = "allow"

# Subjective `pedantic` lints we accept the readability tradeoff on:
module_name_repetitions   = "allow"  # `kex::KexInit` is clearer than `kex::Init`
must_use_candidate         = "allow"  # noisy on small accessors; revisit at 0.1
missing_errors_doc         = "allow"  # error-source docs live in `KyberLibError` itself
missing_panics_doc         = "allow"  # safe core forbids `unsafe`; panic sites are reviewed
similar_names              = "allow"  # `pk`/`sk` and `ct`/`ss` are spec-canonical
cast_possible_truncation   = "allow"  # crypto code does exact-size casts by construction
cast_possible_wrap         = "allow"  # same
cast_sign_loss             = "allow"  # same
many_single_char_names     = "allow"  # spec uses `a`, `b`, `r`, `s`, `e1`, `e2`
unreadable_literal         = "allow"  # `KYBER_Q = 3329` magic constants follow the spec

# `nursery` subjective allows:
option_if_let_else         = "allow"  # readability is style-dependent
use_self                   = "allow"  # explicit type names aid grep + audit
missing_const_for_fn       = "allow"  # crypto fns rarely benefit; eval per site

# Codebase-wide subjective lints that fire heavily on the pq-crystals-
# inherited reference backend (NTT / Barrett / polynomial arithmetic).
# Cleaning these site-by-site would diverge from the upstream
# pq-crystals C reference that the audit story relies on. Kept as
# `allow` until the const-generic refactor in #130b (which will
# rewrite those modules anyway).
doc_markdown                       = "allow"  # 127 hits — most are spec acronyms (ML-KEM, NTT, IND-CCA)
redundant_pub_crate                = "allow"  # 50 hits in nested private modules
wildcard_imports                   = "allow"  # 26 hits — pq-crystals reference uses `use super::*` style
cast_lossless                      = "allow"  # 36 hits — explicit `as` matches the C spec verbatim
semicolon_if_nothing_returned      = "allow"  # 14 hits — formatting preference
used_underscore_binding            = "allow"  # 9 hits — `_rng` placeholders in dummy-RNG paths
unused_result_ok                   = "allow"  # criterion + benches consume builder results lazily
items_after_statements             = "allow"  # 4 hits in nested test modules
needless_pass_by_value             = "allow"  # 4 hits — by-value array passes are spec-canonical
ptr_arg                            = "allow"  # mutable-reference helpers that don't always mutate
needless_return                    = "allow"  # explicit returns in long functions aid audit
uninlined_format_args              = "allow"  # `format!("{val:?}")` stays optional, not mandatory
large_types_passed_by_value        = "allow"  # 512+ byte arrays are spec-canonical KEM buffers
no_effect_underscore_binding       = "allow"  # `_rng` placeholders in dummy-RNG paths
too_many_lines                     = "allow"  # FIPS 203 reference functions match spec line-for-line
explicit_iter_loop                 = "allow"  # `for x in y.iter()` is clearer at audit time than `for x in &y`
unnecessary_wraps                  = "allow"  # symmetric Ok-returning helpers keep call sites uniform
needless_pass_by_ref_mut           = "allow"  # `&mut` placeholders in test/bench setup are intentional
too_long_first_doc_paragraph       = "allow"  # crypto API descriptions are dense by necessity

# `cargo` group is currently clean.

# ----------------------------------------------------------------------- profiles
[profile.dev]
codegen-units    = 256
debug            = true
debug-assertions = true
incremental      = true
lto              = false
opt-level        = 0
overflow-checks  = true
panic            = 'unwind'
rpath            = false
strip            = false

[profile.release]
# Crypto code: optimise hard, trade compile time for runtime speed.
# `lto = true` (= "fat") + `codegen-units = 1` lets LLVM inline across
# crate boundaries — the FIPS 203 hot path (NTT, Barrett-reduce,
# poly_compress) benefits the most because callers see the reduced
# control-flow graph. `panic = "abort"` cuts ~5% binary size by
# removing unwinding tables; safe because every panic in kyberlib is
# an invariant violation we'd rather crash on than recover from.
# `strip = "symbols"` is more aggressive than `"debuginfo"` — it
# removes function names too, so panic stack traces in production
# only show addresses. Acceptable because (a) this ships as an rlib
# not a binary, (b) FIPS 203 ML-KEM has no recoverable panic paths;
# any panic is a CI-caught bug. Bump to `"debuginfo"` if you want
# nicer crash dumps in deployed apps that embed kyberlib.
codegen-units    = 1
debug            = false
debug-assertions = false
incremental      = false
lto              = true
opt-level        = 3
overflow-checks  = false
panic            = "abort"
rpath            = false
strip            = "symbols"

[profile.test]
codegen-units    = 256
debug            = true
debug-assertions = true
incremental      = true
lto              = false
opt-level        = 0
overflow-checks  = true
rpath            = false
strip            = false
