[package]
name = "kyberlib-asm"
description = "AVX2 / NEON assembly acceleration backend for kyberlib (placeholder skeleton)."
documentation = "https://docs.rs/kyberlib-asm"
readme = "README.md"
categories = ["algorithms", "cryptography", "no-std"]
keywords = ["kyber", "kem", "post-quantum", "avx2", "neon"]
publish = false   # Skeleton; not yet on crates.io. Phase 1.2 follow-up will flip this.

authors.workspace      = true
edition.workspace      = true
homepage.workspace     = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

[lib]
name       = "kyberlib_asm"
path       = "src/lib.rs"
crate-type = ["rlib"]

[features]
default = []

[lints]
workspace = true
