[package]
name = "kyberlib-wasm"
description = "WebAssembly bindings for kyberlib — FIPS 203 ML-KEM (CRYSTALS-Kyber) in the browser via wasm-bindgen."
documentation = "https://docs.rs/kyberlib-wasm"
readme = "README.md"
categories = ["algorithms", "cryptography", "wasm"]
keywords = ["ml-kem", "kyber", "post-quantum", "wasm", "wasm-bindgen"]

authors.workspace      = true
edition.workspace      = true
homepage.workspace     = true
license.workspace      = true
repository.workspace   = true
rust-version.workspace = true
version.workspace      = true

include = [
    "/CHANGELOG.md",
    "/LICENSE-APACHE",
    "/LICENSE-MIT",
    "/Cargo.toml",
    "/README.md",
    "/src/**",
    "/tests/*.rs",
]

[lib]
# wasm-bindgen requires cdylib for the JS-side artefact.
crate-type = ["cdylib", "rlib"]
name       = "kyberlib_wasm"
path       = "src/lib.rs"

[dependencies]
# See note on the same dep in `kyberlib-hybrid/Cargo.toml`.
kyberlib     = { path = "../kyberlib", version = "0.0.7", default-features = false, features = ["kyber768"] }
rand_core    = { workspace = true }
rand         = { workspace = true, features = ["getrandom"] }
wasm-bindgen = { workspace = true }

[dev-dependencies]
wasm-bindgen-test = { workspace = true }

[features]
default = []

[lints]
workspace = true

[package.metadata.docs.rs]
default-target = "wasm32-unknown-unknown"
targets        = ["wasm32-unknown-unknown"]
rustdoc-args   = ["--cfg", "docsrs"]
